# pisp

./: .gitignore  README.md  cpu_runner.py  golden_test.py  isa.py  main.py  parser.py  pseudo_machine_code.json  pyproject.toml  runner.py  todo.txt  translate.py  translate_cl.py  translator.py
.github/workflows/: main.yml
cpu/: ALU.py  accumulator.py  control_unit.py  cpu_runner.py  data_memory.py  data_path.py  instruction_memory.py  register.py
cpu/utils/: ioutils.py
examples/: cat.asm  hello_username.asm  hello_world.asm  prob2.asm
golden/: cat.yml  hello_username.yml  hello_world.yml  prob2.yml
io/: input.txt  output.txt
json/: instructions.json  jsonified.json  jsonified_file.json  processor_template.json
pisp_code/: featuresExample.pisp  helloWorld.pisp
test/: golden_tests.py
test/golden/: cat.yaml
