[tool.poetry]
name = "pisp"
version = "0.1.0"
description = "Basic asm-like language and a accumulator cpu model"
authors = ["Vedernikov Anton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.4.8"
pytest = "^8.2.2"
pluggy = "^1.5.0"
pytest-golden = "^0.2.2"
coverage = "^7.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
addopts = "--doctest-modules"
log_format = "%(levelname)-7s %(module)s:%(funcName)-13s %(message)s"


[tool.ruff]
lint.select = [
    # A set of chosen linter rules is specified here.
    # See https://beta.ruff.rs/docs/rules/ for more info.
    # pyflakes (simple obvious errors)
    "F",
    # pycodestyle (style linter, pep8, black-compatible)
    "E",
    "W",
    # pep8-naming (style linter, pep8 naming conventions)
    "N",
    # isort (imports sorting)
    "I",
    # mccabe (cyclomatic complexity analyzer to prevent overcomplicated functions)
    "C90",
    # pyupgrade (possible syntax upgrades checker)
    "UP",
    # eradicate (commented-out code finder for it to be removed)
    "ERA",
    # flake8-2020 (errors related to sys.version or sys.version_info, just in case)
    "YTT",
    # flake8-annotations (enforces presense of type hints so the codebase is fully typed)
    # "ANN",  # too burdensome
    # flake8-async (async-related mistakes/errors)
    "ASYNC",
    # flake8-builtins (checks builtin names shadowing, it's better not to)
    "A",
    # flake8-commas (to enforce trailing commas)
    "COM",
    # flake8-future-annotations (to ensure enabling modern (3.7+) postponed evaluation of type hints)
    "FA",
    # flake8-import-conventions (to enforce standartized import aliases like "import pandas as pd")
    "ICN",
    # flake8-no-pep420 (to enforce presence of __init__.py in packages)
    "INP",
    # flake8-print (to disallow print statements)
    "T20",
    # flake8-pytest-style (to improve pytest-related style consistency)
    "PT",
    # flake8-quotes (to enforce quotes style)
    "Q",
    # flake8-return (checks mistakes related to return values)
    "RET",
    # flake8-use-pathlib (to enforce pathlib usage instead of os.path)
    "PTH",
    # pandas-vet (pandas-related advices)
    "PD",
    # tryceratops (try/except-related advices)
    "TRY",
    # ruff-specific advices
    "RUF",
]

lint.ignore = [
    "E721",
    "E501",
    "INP001",
    "PTH123",
    "C901",
    "PTH118",
    "N999"
]

[tool.ruff.lint.mccabe]
max-complexity = 7